<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="lblGrxd">个人巡店</string>
    <string name="lblQyxd">区域巡店</string>
    <string name="lblId">主键</string>
    <string name="lblIdx">序号</string>
    <string name="lblLoginId">帐号</string>
    <string name="lblFname">姓名</string>
    <string name="lblFmonth">月份</string>
    <string name="lblXdcs">巡店次数</string>
    <string name="lblTimes">次数</string>
    <string name="lblFyear">年份</string>
    <string name="lblSearch">查询</string>
    <string name="lblPageFirst">第一页</string>
    <string name="lblPagePrev">上一页</string>
    <string name="lblPageNext">下一页</string>
    <string name="lblPageLast">最后页</string>
    <string name="lblDefPageSize">30</string>
    <string name="lblDefPageDiv">/</string>
    <string name="lblDefCount">100</string>
    <string name="lblDefPageNoHead">第</string>
    <string name="lblDefPageNo">1</string>
    <string name="lblDefPageNoEnd">页</string>
    <string name="rdcz_title">入店操作</string>
    <string name="lbl_ds_name">药店名称</string>
    <string name="lbl_ds_code">药店编码</string>
    <string name="lblIsAddSvisitor">是否录随访人员</string>
    <string name="lbl_floginId">登录帐号</string>
    <string name="rdcz_btn_pz_text">拍照</string>
    <string name="rdcz_img_desp">图片预览区</string>
    <string name="rdcz_btn_rd_text">入店</string>
    <string name="rdcz_btn_tc_text">退出</string>
    <string name="rdcz_btn_test_text">测试</string>
    <string name="lblJxcj">继续采集</string>
    <string name="lblIntoOtherStore">入其它店</string>
    <string name="lblExit">退出系统</string>
    <string name="lblSaveJxcj">保存继续采集</string>
    <string name="lblSaveExit">保存退出</string>
    <string name="lblDestFlag">是否目标</string>
    <string name="lblDsCode">药店编码</string>
    <string name="lblDsName">药店名称</string>
    <string name="lblDsLevel">药店等级</string>
    <string name="lblMBYD">目标药店</string>
    <string name="lblMonthAmt">月营业额(元)</string>
    <string name="lblDsProvinces">所在省份</string>
    <string name="lblDsCity">所在城市</string>
    <string name="lblDsAddress">药店位置</string>
    <string name="lblPointX">经度坐标</string>
    <string name="lblPointY">纬度坐标</string>
    <string name="lblOtcDb">OTC代表</string>
    <string name="lblSave">保存</string>
    <string name="lblDrugCode">药品编码</string>
    <string name="lblDrugName">药品名称</string>
    <string name="lblDrugBcode">药品条码</string>
    <string name="lblClm">陈 列 面</string>
    <string name="lblClwz">陈列位置</string>
    <string name="lblPrice">价　　格</string>
    <string name="lblPh">批　　号</string>
    <string name="lblKc">陈列库存</string>
    <string name="lblSl">月 销 量</string>
    <string name="lblShibie">识别</string>
    <string name="lblJgm">监 管 码</string>
    <string name="lblLng">经度:</string>
    <string name="lblLat">纬度:</string>
    <string name="lblLngLat">坐标:</string>
    <string name="lblTime">时间:</string>
    <string name="lblAddress">地址:</string>
    <string name="lblGPSLocation">GPS定位</string>
    <string name="lblJZLocation">基站定位</string>
    <string name="lblBbfx">报表分析</string>
    <string name="lblBaiduMap">百度地图</string>
    <string name="lblAutoLocation">自动定位</string>
    <string name="lblCancelLocation">取消定位</string>
    <string name="lblSearching">正在获取中......</string>
    <string name="lblSearchScope">正在查询周边1000米内的药店......</string>
    <string name="hello">Hello World, ZMapForDatagatherActivity!</string>
    <string name="app_name">智能巡店</string>
    <string name="insertDrugstoreWindowTitle">新增药店</string>
    <string name="alert_dialog_ok">确认，返回采集界面</string>
    <string name="alert_dialog_cancle">不，重新拍摄条码</string>
    <string name="drug_do_photo">拍照</string>
    <string name="drug_name_label">药品名称</string>
    <string name="drug_price_label">药品价格</string>
    <string name="drug_type_label">品种类别</string>
    <string name="drugstore_name_label">药店名称</string>
    <string name="drug_submit_btn">上传</string>
    <string name="drug_cancle_btn">取消</string>
    <string name="login_username_label">登录帐号</string>
    <string name="login_password_label">登录密码</string>
    <string name="lblSVisitor">随访人员</string>
    <string name="lblXdMode">巡店模式</string>
    <string name="lblChXdMode">请选择巡店模式</string>
    <string name="lblOtc">OTC代表：</string>
    <string name="add_store">新增药店</string>
    <string name="btnLoginText">登录</string>
    <string name="btnCancelText">重置</string>
    <string name="btnUpdatePwd">修改密码</string>
    <string name="lblTest">测试</string>
    <string name="lblUpdate">更新</string>
    <string name="btnExitText">退出</string>
    <string name="lblRemerberUid">记住用户</string>
    <string name="lblRemerberPwd">记住密码</string>
    <string name="btnRdczText">入店操作</string>
    <string name="lblOldPwd">旧密码</string>
    <string name="lblNewPwd">新密码</string>
    <string name="lblCfgNewPwd">确认新密码</string>
    <string name="lblOK">确定</string>
    <string name="lblCancel">取消</string>
    <string name="periphery">周边药店</string>
    <string name="stock_check">查询库存</string>
    <string name="back_off">返回</string>
    <string name="no_file">Can not find the file!</string>
    <string name="textview">TextView</string>
    <string name="got_code">您已经取得了条码：</string>
    <string name="gaining">获取中..</string>
    <string name="is_back_off_collection_activity">是否返回药品采集界面？</string>
    <string name="name_of_store">药店名称</string>
    <string name="detail_address">详细地址</string>
    <string name="drugs_check">查询药品</string>
    <string name="add_drugs">新增药品</string>
    <string name="basic_data_download">基础资料下载</string>
    <string name="drugstore_info">药店资料</string>
    <string name="opi">产品信息</string>
    <string name="regional_data">地区资料</string>
    <string name="data_upload">数据上传</string>
    <string name="local_cache">本地缓存</string>
    <string name="clear_cache">清除缓存</string>
    <string name="ente_the_shop"><![CDATA[进入巡店>>>]]></string>
    <string name="take_photo">拍照</string>
    <string name="quit">退出</string>
    <string name="append">添加</string>
    <string name="scanning">Scanning&#8230;</string>
</resources>
