<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0dip" android:textColor="@android:color/black" android:gravity="center" android:id="@id/tvIdx" android:background="#fff5fafa" android:layout_width="38.0dip" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginTop="0.0dip" android:layout_marginBottom="0.0dip" android:text="@string/lblIdx" />
    <TextView android:textSize="14.0dip" android:textColor="@android:color/black" android:id="@id/tvFname" android:background="#fff5fafa" android:visibility="gone" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginTop="0.0dip" android:layout_marginBottom="0.0dip" android:text="@string/lblFname" />
    <TextView android:textSize="14.0dip" android:textColor="@android:color/black" android:gravity="center" android:id="@id/tvFyear" android:background="#fff5fafa" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginTop="0.0dip" android:layout_marginBottom="0.0dip" android:text="@string/lblFyear" />
    <TextView android:textSize="14.0dip" android:textColor="@android:color/black" android:gravity="center" android:id="@id/tvFmonth" android:background="#fff5fafa" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginTop="0.0dip" android:layout_marginBottom="0.0dip" android:text="@string/lblFmonth" />
    <TextView android:textSize="14.0dip" android:textColor="@android:color/black" android:gravity="center" android:id="@id/tvXdcs" android:background="#fff5fafa" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginTop="0.0dip" android:layout_marginBottom="0.0dip" android:text="@string/lblXdcs" />
</LinearLayout>