<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/got_code"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@id/drug_zxing_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gaining"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_back_off_collection_activity"
        android:textAppearance="?android:textAppearanceLarge" />
</LinearLayout>