<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/titleBar"
        layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:id="@id/trLng"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblLng"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/gray_222" />

            <TextView
                android:id="@id/tvLng"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblSearching"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/trLat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblLat"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/gray_222" />

            <TextView
                android:id="@id/tvLat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblSearching"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTime"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/gray_222" />

            <TextView
                android:id="@id/store_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblSearching"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/trAdd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAddress"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/gray_222" />

            <TextView
                android:id="@id/store_address_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblSearching"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/trBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@id/store_GPS_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/green_button"
                android:onClick="doGPSLocation"
                android:text="@string/lblGPSLocation"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:id="@id/store_network_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4.0dip"
                android:text="@string/lblJZLocation"
                android:visibility="gone" />

            <Button
                android:id="@id/btnBbfx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-8.0dip"
                android:onClick="openBbfx"
                android:text="@string/lblBbfx"
                android:visibility="gone" />

            <Button
                android:id="@id/store_map_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/green_button"
                android:onClick="gotoBaiduMap"
                android:text="@string/lblBaiduMap"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:id="@id/btn_add_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/green_button"
                android:onClick="addStore"
                android:text="@string/add_store"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <Button
                android:id="@id/store_autolocation_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAutoLocation" />

            <Button
                android:id="@id/store_stoplocation_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblCancelLocation" />
        </LinearLayout>

        <TextView

            android:id="@id/store_storelist_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/lblSearchScope"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/search_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffc1dad7">

            <TextView
                android:layout_width="32.0dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1.0dip"
                android:layout_marginLeft="1.0dip"
                android:layout_marginTop="1.0dip"
                android:background="#fff0f1f3"
                android:gravity="center"
                android:text="@string/lblIdx"
                android:textColor="#ff000000"
                android:textSize="16.0dip" />

            <TextView
                android:layout_width="70.0dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1.0dip"
                android:layout_marginLeft="1.0dip"
                android:layout_marginTop="1.0dip"
                android:background="#fff0f1f3"
                android:gravity="center"
                android:text="@string/lblDestFlag"
                android:textColor="#ff000000"
                android:textSize="16.0dip" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1.0dip"
                android:layout_marginLeft="1.0dip"
                android:layout_marginRight="1.0dip"
                android:layout_marginTop="1.0dip"
                android:background="#fff0f1f3"
                android:gravity="center"
                android:text="@string/lblDsName"
                android:textColor="#ff000000"
                android:textSize="16.0dip" />
        </LinearLayout>

        <ListView
            android:id="@id/lvDisp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/activity_bg"
            android:cacheColorHint="#ffffffff"
            android:fadingEdge="none"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
            android:scrollingCache="false"
            android:textColor="#ff000000" />
    </LinearLayout>
</LinearLayout>