<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:onClick="doContinue"
        android:text="@string/lblJxcj"
        android:layout_marginLeft="5dp"
        android:textSize="16sp"
        android:background="@drawable/green_button"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceMedium" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:onClick="doOther"
        android:layout_marginLeft="5dp"
        android:textSize="16sp"
        android:text="@string/lblIntoOtherStore"
        android:background="@drawable/green_button"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceMedium" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:layout_marginLeft="5dp"
        android:textSize="16sp"
        android:onClick="doExit"
        android:text="@string/lblExit"
        android:background="@drawable/green_button"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceMedium" />
</LinearLayout>